--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class = "slider" id = "slider">
             <div class = "slides">
                 <div class = "nav">
-                    <a class = "logo" href = "../Main/mainpage.html">EUR♡MATE</a>
+                    <a class = "logo" href = "https://napjak.github.io/Main/">EUR♡MATE</a>
                     <ul class = "category">
                         <li><a href = "#">브랜드소개</a></li>
-                        <li><a href = "../Reservation/reservation.html">소그룹 유럽여행</a></li>
+                        <li><a href = "https://napjak.github.io/reserve/">소그룹 유럽여행</a></li>
                         <li><a href = "#">패키지 여행 큐레이션</a></li>
                         <li><a href = "#">유럽 여행 정보</a></li>
                     </ul>
@@ -46,10 +46,10 @@
                     <h2>스위스</h2>
 
                     <div class = "button">
-                        <div OnClick="location.href ='../Reservation/reservation.html'" style="cursor:pointer;" class = "see-more">
+                        <div OnClick="location.href ='https://napjak.github.io/reserve/'" style="cursor:pointer;" class = "see-more">
                             <p>SEE MORE</p>
                         </div>
-                        <div OnClick="location.href ='../Main/mainpage.html'" style="cursor:pointer;" class = "main-page">
+                        <div OnClick="location.href ='https://napjak.github.io/Main/'" style="cursor:pointer;" class = "main-page">
                             <p>홈페이지 접속</p>
                         </div>
                     </div>
